--- a/css/wireframe.css
+++ b/css/wireframe.css
@@ -253,6 +253,7 @@ th {
 label {
 	display: inline-block;
 	margin-bottom: 0.5rem;
+	text-align: center;
 }
 
 button {
@@ -1867,54 +1868,6 @@ pre code {
 
 .table-responsive>.table-bordered {
 	border: 0;
-}
-
-.clearfix:after{content:'';display:block;clear:both;}
-.form-btn {
-	padding: 0.8rem;
-	font-family: NotoSansCJKkr;
-  	font-size: 18px;
-	font-stretch: normal;
-	font-style: normal;
-	line-height: 1.39;
-	letter-spacing: normal;
-	text-align: center;
-	width: 100%;
-	border: none;
-	border-radius: 32.5px !important;
-  	background-color: #e6e6e6;
-}
-.mb-3 .on {
-	font-weight: bold;
-	background-color: #a7574b;
-	color: #ffffff;
-}
-.mb-3 ul {
-	width: 100%;
-	list-style: none;
-	padding-left: 0px;
-}
-.mb-3 ul>li {
-	float: left;
-	width: 33.33%;
-	margin: 0 1rem 1rem 0;
-}
-
-.form-control {
-	display: block;
-	width: 100%;
-	height: calc(2.25rem + 2px);
-	padding: 0.375rem 0.75rem 0.375rem 0;
-	font-size: 1rem;
-	line-height: 1.5;
-	color: #495057;
-	background-color: #fff;
-	background-clip: padding-box;
-	border: none;
-	border-bottom: solid 0.5px #000000;
-	/* border-radius: 0.25rem; */
-	/* box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); */
-	/* transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
@@ -9624,4 +9577,91 @@ body {
 
 .cover {
 	min-height: 100%;
+}
+
+
+/* 추가한 css */
+.form-image-box {
+	display: inline-flex;
+}
+.clearfix:after{content:'';display:block;clear:both;}
+.form-btn {
+	padding: 0.8rem;
+	font-family: NotoSansCJKkr;
+  	font-size: 18px;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: 1.39;
+	letter-spacing: normal;
+	text-align: center;
+	width: 100%;
+	border: none;
+	border-radius: 32.5px !important;
+  	background-color: #e6e6e6;
+}
+.mb-3 .on {
+	font-weight: bold;
+	background-color: #a7574b;
+	color: #ffffff;
+}
+.mb-3 ul {
+	width: 100%;
+	list-style: none;
+	padding-left: 0px;
+}
+.mb-3 ul>li {
+	float: left;
+	width: 33.33%;
+	margin: 0 1rem 1rem 0;
+}
+
+.form-control {
+	display: block;
+	width: 100%;
+	height: calc(2.25rem + 2px);
+	padding: 0.375rem 0.75rem 0.375rem 0;
+	font-size: 1rem;
+	line-height: 1.5;
+	color: #495057;
+	background-color: #fff;
+	background-clip: padding-box;
+	border: none;
+	border-bottom: solid 0.5px #000000;
+	/* border-radius: 0.25rem; */
+	/* box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); */
+	/* transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
+}
+
+.front-img-btn {
+	width: 6.389rem;
+	height: 6.389rem;
+	border-radius: 7px;
+	border: solid 0.5px #b9b9b9;
+	background-image: url('../img/group-2-copy-3.png');
+	background-repeat: no-repeat;
+	background-position: center;	
+}
+
+@media (min-width: 576px) {
+	.front-img-btn {
+		background-image: url('../img/group-2-copy-3.png');
+	}
+}
+
+@media (min-width: 768px) {
+	.front-img-btn {
+		background-image: url('../img/group-2-copy-3@2x.png');
+	}
+}
+
+@media (min-width: 992px) {
+	.front-img-btn {
+		background-image: url('../img/group-2-copy-3@2x.png');
+	}
+}
+
+@media (min-width: 1200px) {
+	.front-img-btn {
+		background-image: url('../img/group-2-copy-3@3x.png');
+	}
 }
